--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -151,29 +151,29 @@ jobs:
     #              SERVER_START_CMD: 'yarn cy:server'
     #              SERVER_URL: 'http://localhost:5001'
 
-    publish:
-        runs-on: ubuntu-latest
-        needs: [build, lint] # add e2e and/or test if you use it
-        if: "!contains(github.event.head_commit.message, '[skip ci]')"
-        steps:
-            - uses: actions/checkout@v2
-              with:
-                  token: ${{env.GH_TOKEN}}
+    # publish:
+    #     runs-on: ubuntu-latest
+    #     needs: [build, lint] # add e2e and/or test if you use it
+    #     if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    #     steps:
+    #         - uses: actions/checkout@v2
+    #           with:
+    #               token: ${{env.GH_TOKEN}}
 
-            - uses: actions/setup-node@v1
-              with:
-                  node-version: 16.x
+    #         - uses: actions/setup-node@v1
+    #           with:
+    #               node-version: 16.x
 
-            - uses: actions/download-artifact@v2
-              with:
-                  name: app-build
+    #         - uses: actions/download-artifact@v2
+    #           with:
+    #               name: app-build
 
-            - uses: dhis2/deploy-build@master
-              with:
-                  # uncomment following line for monorepo apps:
-                  #cwd: ./packages/app
-                  build-dir: build/app
-                  github-token: ${{ env.GH_TOKEN }}
+    #         - uses: dhis2/deploy-build@master
+    #           with:
+    #               # uncomment following line for monorepo apps:
+    #               #cwd: ./packages/app
+    #               build-dir: build/app
+    #               github-token: ${{ env.GH_TOKEN }}
 
     release:
         runs-on: ubuntu-latest
