--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -84,107 +84,87 @@ jobs:
 
     # test:
     #     runs-on: ubuntu-latest
-    #     needs: install
-    #     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     #     steps:
     #         - uses: actions/checkout@v2
     #         - uses: actions/setup-node@v1
     #           with:
     #               node-version: 16.x
 
-    #         - uses: actions/cache@v2
-    #           id: yarn-cache
-    #           with:
-    #               path: '**/node_modules'
-    #               key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+    #         - uses: c-hive/gha-yarn-cache@v1
+    #         - run: yarn install --frozen-lockfile
 
+    #         # Can be removed if translations aren't required for tests,
+    #         # or if not using the App Platform
     #         - name: Generate translations
     #           run: yarn d2-app-scripts i18n generate
 
     #         - name: Test
-    #           run: yarn test --passWithNoTests
+    #           run: yarn d2-app-scripts test
 
-    #e2e:
-    #    runs-on: ubuntu-latest
-    #    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    #    needs: [install]
-    #
-    #    strategy:
-    #        matrix:
-    #            containers: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-    #
-    #    steps:
-    #        - name: Checkout
-    #          uses: actions/checkout@v2
-    #
-    #        - uses: actions/setup-node@v1
-    #          with:
-    #              node-version: 16.x
-    #
-    #        - uses: actions/cache@v2
-    #          id: yarn-cache
-    #          with:
-    #              path: '**/node_modules'
-    #              key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-    #
-    #        - name: Install Cypress binary
-    #          run: yarn cypress install
-    #
-    #        - name: End-to-End tests
-    #          uses: cypress-io/github-action@v2
-    #          with:
-    #              install: false
-    #              record: true
-    #              parallel: true
-    #              start: ${{ env.SERVER_START_CMD }}
-    #              wait-on: ${{ env.SERVER_URL }}
-    #              wait-on-timeout: 300
-    #              cache-key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-    #              group: 'e2e'
-    #              tag: ${{ github.event_name }}
-    #          env:
-    #              CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-    #              COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
-    #              STORYBOOK_TESTING: true
-    #              SERVER_START_CMD: 'yarn cy:server'
-    #              SERVER_URL: 'http://localhost:5001'
+    # e2e:
+    #     runs-on: ubuntu-latest
+    #     if: "!github.event.push.repository.fork && github.actor != 'dependabot[bot]'"
 
-    publish:
+    #     strategy:
+    #         fail-fast: false
+    #         matrix:
+    #             containers: [1, 2, 3, 4]
+
+    #     steps:
+    #         - name: Checkout
+    #           uses: actions/checkout@v2
+
+    #         - uses: actions/setup-node@v1
+    #           with:
+    #               node-version: 16.x
+
+    #         - name: End-to-End tests
+    #           uses: cypress-io/github-action@v2
+    #           with:
+    #               start: yarn d2-app-scripts start
+    #               wait-on: 'http://localhost:3000'
+    #               wait-on-timeout: 300
+    #               record: true
+    #               parallel: true
+    #           env:
+    #               BROWSER: none
+    #               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #               CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+    #               CYPRESS_dhis2BaseUrl: http://localhost:8080
+    #               CYPRESS_dhis2ApiVersion: 41
+    #               CYPRESS_networkMode: stub
+
+    release:
         runs-on: ubuntu-latest
-        needs: [build, lint] # add e2e and/or test if you use it
-        if: "!contains(github.event.head_commit.message, '[skip ci]')"
+        needs: [install, build, lint] # add e2e and test here if you use it
+        if: "!github.event.push.repository.fork && github.actor != 'dependabot[bot]'"
         steps:
             - uses: actions/checkout@v2
               with:
-                  token: ${{env.GH_TOKEN}}
+                  token: ${{ secrets.DHIS2_BOT_GITHUB_TOKEN }}
 
-            - uses: actions/setup-node@v1
+            - uses: actions/setup-node@v3
               with:
-                  node-version: 16.x
+                  node-version: 16
+                  cache: 'yarn'
 
             - uses: actions/download-artifact@v2
               with:
                   name: app-build
+
+            # ensure that d2-app-scripts is available
+            - run: yarn install --frozen-lockfile
+
+            - uses: dhis2/action-semantic-release@master
+              with:
+                  publish-apphub: true
+                  publish-github: true
+                  github-token: ${{ secrets.DHIS2_BOT_GITHUB_TOKEN }}
+                  apphub-token: ${{ secrets.DHIS2_BOT_APPHUB_TOKEN }}
 
             - uses: dhis2/deploy-build@master
               with:
                   # uncomment following line for monorepo apps:
                   #cwd: ./packages/app
                   build-dir: build/app
-                  github-token: ${{ env.GH_TOKEN }}
-
-    release:
-        runs-on: ubuntu-latest
-        needs: [publish]
-        if: "github.event_name == 'push' && !contains(github.event.head_commit.message, '[skip ci]')"
-        steps:
-            - uses: actions/checkout@v2
-              with:
-                  token: ${{env.GH_TOKEN}}
-
-            - uses: actions/setup-node@v1
-              with:
-                  node-version: 16.x
-
-            - name: Publish release to GitHub
-              run: npx @dhis2/cli-utils release
+                  github-token: ${{ secrets.DHIS2_BOT_GITHUB_TOKEN }}
