--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "format:js": "d2-style apply js",
         "format:text": "d2-style apply text",
         "format:staged": "yarn format:js --staged && yarn format:text --staged",
-        "format": "d2-style apply js && d2-style apply text"
+        "format": "d2-style apply js && d2-style apply text && d2-style apply text css"
     },
     "devDependencies": {
         "@dhis2/cli-app-scripts": "^12.5.1",
